# patrace

./: .gitignore  .gitmodules  LICENSE  README.md
common/: CMakeLists.txt
common/base/: base.hpp  type.hpp
common/eglstate/: CMakeLists.txt  common.cpp  common.hpp  context.cpp  context.hpp  dump.cpp  dump.hpp  fbo.cpp  fbo.hpp  frame.cpp  frame.hpp  frame_recorder.cpp  frame_recorder.hpp  program.hpp  render_target.cpp  render_target.hpp  vbo.cpp  vbo.hpp
common/image/: CMakeLists.txt  image.cpp  image.hpp  image_astc.cpp  image_compression.cpp  image_compression.hpp  image_compression_astc.cpp  image_compression_btc.cpp  image_compression_etc.cpp  image_io.cpp  image_io.hpp  image_ktx.cpp  image_png.cpp  image_pnm.cpp  image_view_factory.hpp  ktx_io.hpp
common/system/: CMakeLists.txt  environment_variable.cpp  environment_variable.hpp  path.cpp  path.hpp
common/tool/: client_side_buffer_modifier.cpp  config.hpp.in  shader_dumper.cpp  shader_modifier.cpp  texture_dumper.cpp  texture_modifier.cpp  trace_interface.hpp  trace_looper.cpp  trace_looper.hpp
common/tool/imageconv/: CMakeLists.txt  main.cpp
patrace/: .gitignore
patrace/doc/: iOS.txt  manual.md
patrace/project/android/: .gitignore  pat.jks  pat.keystore  settings.gradle
patrace/project/cmake/: CMakeLists.txt
patrace/project/cmake/common/: CMakeLists.txt  src.cmake
patrace/project/cmake/drawstate/: CMakeLists.txt  src.cmake
patrace/project/cmake/eglretrace/: CMakeLists.txt  eglretrace  src.cmake
patrace/project/cmake/egltrace/: CMakeLists.txt  src.cmake
patrace/project/cmake/fakedriver/: CMakeLists.txt  src.cmake
patrace/project/cmake/fastforward/: CMakeLists.txt  src.cmake
patrace/project/cmake/gleslayer/: CMakeLists.txt  config.cmake  src.cmake
patrace/project/cmake/integration_tests/: CMakeLists.txt
patrace/project/cmake/newfastforwarder/: CMakeLists.txt  src.cmake
patrace/project/cmake/pat_editor/: CMakeLists.txt
patrace/project/cmake/pat_editor_gui/: CMakeLists.txt
patrace/project/cmake/tool/: CMakeLists.txt
patrace/project/cmake/toolchains/: fbdev_arm.cmake  fbdev_arm_hardfloat.cmake  fbdev_x32.cmake  fbdev_x64.cmake  udriver_x64.cmake  wayland_aarch64.cmake  wayland_arm_hardfloat.cmake  wayland_x64.cmake  win.cmake  x11_x32.cmake  x11_x64.cmake
patrace/project/cmake/traceview/: CMakeLists.txt
patrace/project/cmake/unittest/: CMakeLists.txt  src.cmake
patrace/project/iOS/: .gitignore  gen_source.sh  gen_version_info.sh
patrace/python/: README.rst
patrace/python/patracetools/: setup.py
patrace/python/pypatrace/: MANIFEST.in  patrace.i  setup.py  thirdparty
patrace/src/: weston-egl-ext.h
patrace/src/common/: analysis_utility.cpp  analysis_utility.hpp  api_info.cpp  api_info.hpp  api_info.py  base64.cpp  base64.hpp  call_parser.py  file_format.hpp  gl_extension_supported.cpp  gl_extension_supported.hpp  gl_utility.cpp  gl_utility.hpp  image.cpp  image.hpp  image_png.cpp  image_pnm.cpp  in_file.cpp  in_file.hpp  in_file_mt.cpp  in_file_mt.hpp  in_file_ra.cpp  in_file_ra.hpp  jni_helper.h  json.hpp  library.cpp  library.hpp  memory.cpp  memory.hpp  memoryinfo.cpp  memoryinfo.hpp  my_egl_attribs.hpp  os.hpp  os_posix.cpp  os_process.hpp  os_string.hpp  os_thread.hpp  os_thread_linux.cpp  os_time.hpp  os_win.cpp  (+11 more)
patrace/src/dispatch/: dispatch.py  eglimports.hpp  eglproc.py  eglproc_retrace.cpp  eglproc_retrace.hpp  eglproc_trace.cpp  gleslayer_helper.h
patrace/src/drawstate/: drawstate.cpp
patrace/src/fakedriver/: README  autogencode.py  common.cpp  common.h
patrace/src/fastforwarder/: fastforwarder.cpp
patrace/src/graphic_buffer/: DynamicLibrary.cpp  DynamicLibrary.hpp  GraphicBuffer.cpp  GraphicBuffer.hpp
patrace/src/helper/: depth_dumper.cpp  depth_dumper.hpp  eglsize.cpp  eglsize.hpp  eglstring.hpp  paramsize.py  shadermod.cpp  shadermod.hpp  shaderutility.cpp  shaderutility.hpp  states.cpp  states.h
patrace/src/integration_tests/: android_test.sh  bindbufferrange_1.cpp  compute_1.cpp  compute_2.cpp  compute_3.cpp  copy_image_1.cpp  directdraw_1.cpp  directdraw_2.cpp  drawrange_1.cpp  drawrange_2.cpp  dummy_1.cpp  ext_gpu_shader5.cpp  ext_tessellation_shader.cpp  ext_texture_border_clamp.cpp  ext_texture_buffer.cpp  ext_texture_cube_map_array.cpp  ext_texture_sRGB_decode.cpp  extension_pack_es31a.cpp  fbdev_test.sh  geometry_shader_1.cpp  imagetex_1.cpp  indirectdraw_1.cpp  indirectdraw_2.cpp  khr_blend_equation_advanced.cpp  khr_debug.cpp  multisample_1.cpp  multisurface_1.cpp  multithread_1.cpp  multithread_2.cpp  multithread_3.cpp  oes_sample_shading.cpp  oes_texture_stencil8.cpp  pa_demo.cpp  pa_demo.h  programs_1.cpp  vertexbuffer_1.cpp  x11_test.sh
patrace/src/newfastforwarder/: README.txt  cutter.cpp  framestore.cpp  framestore.hpp  newfastforwad.cpp  newfastforwad.hpp  parse_egl.cpp  parse_gles.cpp  parse_main.cpp  parser.cpp  parser.hpp
patrace/src/retracer/: afrc_enum.cpp  afrc_enum.hpp  cmd_options.hpp  config.hpp.in  eglconfiginfo.cpp  eglconfiginfo.hpp  glstate.hpp  glstate_images.cpp  glws.cpp  glws.hpp  glws_egl.cpp  glws_egl.hpp  glws_egl_android.cpp  glws_egl_android.hpp  glws_egl_fbdev.cpp  glws_egl_fbdev.hpp  glws_egl_iOS.mm  glws_egl_udriver.cpp  glws_egl_udriver.hpp  glws_egl_wayland.cpp  glws_egl_wayland.hpp  glws_egl_win.cpp  glws_egl_x11.cpp  glws_egl_x11.hpp  glws_iOS.hpp  retrace.py  retrace_api.cpp  retrace_api.hpp  retrace_egl.cpp  retrace_main.cpp  retrace_options.hpp  retracer.cpp  retracer.hpp  state.cpp  state.hpp  texture.hpp  trace_executor.cpp  trace_executor.hpp  value_map.hpp
patrace/src/specs/: debug.py  eglapi.py  gles12api.py  glesparams.py  gltypes.py  glxml_header.py  glxml_to_egl_stubs  glxml_to_egl_stubs.py  glxml_to_extensions.py  glxml_to_funcs  glxml_to_funcs.py  glxml_to_gles1_stubs  glxml_to_gles1_stubs.py  glxml_to_gles2_stubs  glxml_to_gles2_stubs.py  missing_extensions.py  stdapi.py
scripts/: auto_validFF_Android.sh  auto_validFF_Linux.sh  build.py  build_all.py  jenkins.sh  test.sh  validate_analysis.py  x11_test.sh
scripts/renderpass_json/: spirvify.py  validate.py
(+273 files in other folders)
